<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgtile"
    android:orientation="vertical"
    tools:ignore="SmallSp" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="10dp"
            android:layout_height="fill_parent"
            android:layout_gravity="right"
            android:background="#b96b61" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:background="#00736e" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="106dp"
                    android:text="@string/full_app_name"
                    android:textColor="#003f3c"
                    android:textScaleX="0.9"
                    android:textSize="11sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="12dp"
                android:background="#003f3c" >
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="95dp"
            android:layout_height="82dp"
            android:layout_gravity="top"
            android:layout_marginLeft="10dp"
            android:background="#002624"
            android:contentDescription="@string/app_name"
            android:src="@drawable/umci" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <RelativeLayout
            android:layout_width="95dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:background="#002624" >

            <TextView
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/register_cap"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="10dp"
            android:layout_height="fill_parent"
            android:layout_gravity="right"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.2"
                android:background="#b96b61" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="#5b7f7f" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="#4e5253" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#e8e8e5"
            android:orientation="vertical"
            android:padding="12dp" >

            <EditText
                android:id="@+id/editUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:maxLength="15"
                android:textSize="13sp" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="15"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/editConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
                android:hint="@string/confirm"
                android:inputType="textPassword"
                android:maxLength="15"
                android:textSize="13sp" />
            
             <TextView
                android:id="@+id/textGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               	android:text="@string/admin"
               	android:textColor="#000000"
               	android:gravity="center_horizontal"
                android:textSize="13sp" />

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radioYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:textColor="#000000"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/radioNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#000000"
                    android:text="@string/no" />
            </RadioGroup>

            <Button
                android:id="@+id/buttonLocation"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/center" />

            <TextView
                android:id="@+id/textLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="#7c7c7b"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" />

            <Button
                android:id="@+id/buttonCreate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/create" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>