<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgtile"
    android:orientation="vertical"
    tools:ignore="SmallSp" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

		<LinearLayout 
	        android:layout_height="fill_parent"
	        android:layout_width="10dp"
	        android:background="#b96b61"
	        android:layout_gravity="right" />
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:background="#00736e" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="106dp"
                    android:text="@string/full_app_name"
                    android:textColor="#003f3c"
                    android:textSize="11sp"
                    android:textScaleX="0.9"
                     />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="12dp"
                android:background="#003f3c" >
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="95dp"
            android:layout_height="82dp"
            android:layout_gravity="top"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/umci"
            android:background="#002624" />
    </FrameLayout>
	<FrameLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent">
	   
	    
	    <RelativeLayout 
	        android:layout_height="fill_parent" 
	        android:layout_width="95dp"
	        android:layout_marginLeft="10dp"
	        android:background="#002624">
	        
	        <TextView
	            android:layout_width="95dp"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:gravity="center"
	            android:paddingTop="5dp"
	            android:text="@string/login_cap"
	            android:textColor="#FFFFFF"
	            android:textSize="15sp" />
	        
	    </RelativeLayout>
	    
		<LinearLayout 
	        android:layout_height="fill_parent"
	        android:layout_width="10dp"
	        android:layout_gravity="right"
	        android:orientation="vertical">
	        
	        <LinearLayout 
	            android:layout_width="fill_parent" android:layout_height="fill_parent"
	            android:layout_weight="1.2" android:background="#b96b61" />
	        <LinearLayout 
	            android:layout_width="fill_parent" android:layout_height="fill_parent"
	            android:layout_weight="1" android:background="#5b7f7f" />
	        <LinearLayout 
	            android:layout_width="fill_parent" android:layout_height="fill_parent"
	            android:layout_weight="1" android:background="#4e5253" />
	        
	    </LinearLayout> 
	    
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:layout_gravity="center_vertical"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"
	        android:layout_marginBottom="20dp"
	        android:padding="12dp"
	        android:background="#e8e8e5"
	        >
			
			        <EditText
			            android:id="@+id/editUsername"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
			            android:hint="@string/username"
			            android:inputType="textPersonName"
			            android:maxLength="15"
			            android:textSize="13sp" >
			
			            <requestFocus />
			        </EditText>
			
			        <EditText
			            android:id="@+id/editPassword"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
			            android:hint="@string/password"
			            android:inputType="textPassword"
			            android:maxLength="15"
			            android:textSize="13sp" />
			
			        <CheckBox
			            android:id="@+id/checkBox"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"		            
			            android:text="@string/remember"
			            android:textColor="#000000"
			            android:textSize="13sp"
			            android:layout_marginRight="10dp" />		

		            <Button
		                android:id="@+id/buttonLog"
		                android:layout_width="fill_parent"
		                android:layout_height="fill_parent"
		                android:layout_gravity="center"
		                android:gravity="center"
		                android:text="@string/login" />
		
		            <Button
		                android:id="@+id/buttonRegister"
		                android:layout_width="fill_parent"
		                android:layout_height="fill_parent"
		                android:text="@string/notyet"
		                android:gravity="center"
		                 />
			        
		</LinearLayout>
	</FrameLayout>
</LinearLayout>