<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgtile"
    android:orientation="vertical"
    tools:ignore="SmallSp" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="10dp"
            android:layout_height="fill_parent"
            android:layout_gravity="right"
            android:background="#b96b61" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:background="#00736e" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="106dp"
                    android:text="@string/full_app_name"
                    android:textColor="#003f3c"
                    android:textScaleX="0.9"
                    android:textSize="11sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="12dp"
                android:background="#003f3c" >
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="95dp"
            android:layout_height="82dp"
            android:layout_gravity="top"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/umci" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="10dp"
            android:layout_height="fill_parent"
            android:layout_gravity="right"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.2"
                android:background="#b96b61" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="#5b7f7f" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="#4e5253" />
        </LinearLayout>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="#55000000"
                        android:gravity="center_vertical"
                        android:minHeight="35dp"
                        android:paddingLeft="10dp"
                        android:text="@string/firstname"
                        android:textColor="#FFFFFF"
                        android:textSize="13sp" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="#22000000" >

                        <EditText
                            android:id="@+id/editFirstname"
                            android:layout_width="180dp"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:textSize="13sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="#55000000"
                        android:gravity="center_vertical"
                        android:minHeight="35dp"
                        android:paddingLeft="10dp"
                        android:text="@string/lastname"
                        android:textColor="#FFFFFF"
                        android:textSize="13sp" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="#22000000" >

                        <EditText
                            android:id="@+id/editLastname"
                            android:layout_width="180dp"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:textSize="13sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="#55000000"
                        android:gravity="center_vertical"
                        android:minHeight="35dp"
                        android:paddingLeft="10dp"
                        android:text="@string/gender"
                        android:textColor="#FFFFFF"
                        android:textSize="13sp" />

                    <RadioGroup
                        android:id="@+id/radioGroup1"
                        android:layout_width="fill_parent"
                        android:layout_height="46dp"
                        android:background="#22000000"
                        android:orientation="horizontal" >

                        <RadioButton
                            android:id="@+id/radioMale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/male" />

                        <RadioButton
                            android:id="@+id/radioFemale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/female" />
                    </RadioGroup>
                </LinearLayout>

                <TextView
                    android:id="@+id/textDOB"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="#55000000"
                    android:gravity="center_vertical"
                    android:minHeight="35dp"
                    android:paddingLeft="10dp"
                    android:text="@string/dob"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp" />

                <DatePicker
                    android:id="@+id/datePicker1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:id="@+id/textLocation"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="#55000000"
                    android:gravity="center_vertical"
                    android:minHeight="35dp"
                    android:paddingLeft="10dp"
                    android:text="@string/village"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp" />

                <Button
                    android:id="@+id/buttonLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/village" />
                
                <LinearLayout 
                    android:layout_height="1dp"
                    android:layout_width="fill_parent"
                    android:background="#55000000"
                    android:layout_margin="5dp"/>
                
                <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="5dp" >

            <Button
                android:id="@+id/buttonCreate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:text="@string/create" />

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:text="@string/cancel" />
        </LinearLayout>
            </LinearLayout>
            
        </ScrollView>
		
    </FrameLayout>

</LinearLayout>