<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgtile"
    android:orientation="vertical"
    tools:ignore="SmallSp" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="10dp"
            android:layout_height="fill_parent"
            android:layout_gravity="right"
            android:background="#b96b61" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:background="#00736e" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="106dp"
                    android:text="@string/full_app_name"
                    android:textColor="#003f3c"
                    android:textScaleX="0.9"
                    android:textSize="11sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="12dp"
                android:background="#003f3c" >
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="95dp"
            android:layout_height="82dp"
            android:layout_gravity="top"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/umci" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="10dp"
            android:layout_height="fill_parent"
            android:layout_gravity="right"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.2"
                android:background="#b96b61" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="#5b7f7f" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="#4e5253" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textTreatmentName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="#55000000"
                    android:gravity="center_vertical|left"
                    android:minHeight="35dp"
                    android:paddingLeft="10dp"
                    android:text="@string/treatment_name"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#22000000"
                android:orientation="vertical"
                android:layout_marginBottom="5dp" >

                <TextView
                    android:id="@+id/textTreatmentDesc"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:minHeight="35dp"
                    android:paddingLeft="10dp"
                    android:text="@string/treatment_desc"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="5dp" >

                <TextView
                    android:id="@+id/textPrescription"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="#55000000"
                    android:gravity="center_vertical|left"
                    android:minHeight="35dp"
                    android:paddingLeft="10dp"
                    android:text="@string/prescription"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp" />
            </LinearLayout>

            <ListView
                android:id="@id/android:list"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:dividerHeight="0dp"
                android:paddingTop="5dp" >
            </ListView>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>